## Makefile.am for tuxmath - data/sounds:
## Process with Automake to create Makefile.in

soundsdir = $(pkgdatadir)/sounds

dist_sounds_DATA = alarm.wav \
  buzz.wav \
  cheer.wav \
  click.wav \
  explosion.wav \
  game2.mod \
  game3.mod \
  game.mod \
  laser.wav\
  pop.wav \
  shieldsdown.wav \
  sizzling.wav \
  tock.wav \
  towerclock.wav \
  tuxi.ogg
