## Makefile.am for tuxmath - data/sounds:
## Process with Automake to create Makefile.in

soundsdir = $(pkgdatadir)/sounds

dist_sounds_DATA = 01_rush.ogg \
  02_on_the_edge_of_the_universe.ogg \
  03_gravity.ogg \
  alarm.wav \
  buzz.wav \
  cheer.wav \
  engine.wav \
  explosion.wav \
  game2.mod \
  game3.mod \
  game.mod \
  harp.wav \
  laser.wav\
  pop.wav \
  shieldsdown.wav \
  sizzling.wav \
  tock.wav \
  towerclock.wav \
  tuxi.ogg
