## Makefile.am for tuxmath data/images/backgrounds:
## Process with AutoMake:

EXTRA_DIST = 	0.jpg	\
		1.jpg	\
		2.jpg	\
		3.jpg	\
		4.jpg	\
		5.jpg	\
		6.jpg	\
		7.jpg	\
		8.jpg	\
		9.jpg	\
		10.jpg	\
		11.jpg	\
		12.jpg

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds

	$(INSTALL_DATA) $(srcdir)/0.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/1.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/2.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/3.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/4.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/5.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/6.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/7.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/8.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/9.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/10.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/11.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
	$(INSTALL_DATA) $(srcdir)/12.jpg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/0.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/1.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/2.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/3.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/4.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/5.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/6.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/7.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/8.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/9.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/10.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/11.jpg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds/12.jpg
	rm -rf $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/backgrounds
