## Makefile.am for tuxmath data/images/cities:
## Process with AutoMake:

EXTRA_DIST =	city-blue.png	\
	cdead-blue.png		\
	csplode-blue-1.png  	\
	csplode-blue-2.png	\
	csplode-blue-3.png	\
	csplode-blue-4.png	\
	csplode-blue-5.png	\
	city-green.png		\
	cdead-green.png		\
	csplode-green-1.png	\
	csplode-green-2.png	\
	csplode-green-3.png	\
	csplode-green-4.png	\
	csplode-green-5.png	\
	city-orange.png		\
	cdead-orange.png	\
	csplode-orange-1.png	\
	csplode-orange-2.png	\
	csplode-orange-3.png	\
	csplode-orange-4.png	\
	csplode-orange-5.png	\
	city-red.png		\
	cdead-red.png		\
	csplode-red-1.png	\
	csplode-red-2.png	\
	csplode-red-3.png	\
	csplode-red-4.png	\
	csplode-red-5.png	\
	shields.png

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities

	$(INSTALL_DATA) $(srcdir)/city-blue.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/cdead-blue.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-blue-1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-blue-2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-blue-3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-blue-4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-blue-5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities

	$(INSTALL_DATA) $(srcdir)/city-green.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/cdead-green.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-green-1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-green-2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-green-3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-green-4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-green-5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities

	$(INSTALL_DATA) $(srcdir)/city-orange.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/cdead-orange.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-orange-1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-orange-2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-orange-3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-orange-4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-orange-5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities

	$(INSTALL_DATA) $(srcdir)/city-red.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/cdead-red.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-red-1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-red-2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-red-3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-red-4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
	$(INSTALL_DATA) $(srcdir)/csplode-red-5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities

	$(INSTALL_DATA) $(srcdir)/shields.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/city-blue.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/cdead-blue.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-blue-1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-blue-2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-blue-3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-blue-4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-blue-5.png

	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/city-green.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/cdead-green.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-green-1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-green-2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-green-3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-green-4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-green-5.png

	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/city-orange.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/cdead-orange.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-orange-1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-orange-2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-orange-3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-orange-4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-orange-5.png

	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/city-red.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/cdead-red.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-red-1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-red-2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-red-3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-red-4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/csplode-red-5.png

	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities/shields.png
	rm -rf $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/cities
