## Makefile.am for tuxmath data/images/cities:
## Process with AutoMake:

citiesdir = $(pkgdatadir)/images/cities

dist_cities_DATA = city-blue.png	\
  cdead-blue.png \
  csplode-blue-1.png \
  csplode-blue-2.png \
  csplode-blue-3.png \
  csplode-blue-4.png \
  csplode-blue-5.png \
  city-green.png \
  cdead-green.png \
  csplode-green-1.png \
  csplode-green-2.png \
  csplode-green-3.png \
  csplode-green-4.png \
  csplode-green-5.png \
  city-orange.png \
  cdead-orange.png \
  csplode-orange-1.png \
  csplode-orange-2.png \
  csplode-orange-3.png \
  csplode-orange-4.png \
  csplode-orange-5.png \
  city-red.png \
  cdead-red.png \
  csplode-red-1.png \
  csplode-red-2.png \
  csplode-red-3.png \
  csplode-red-4.png \
  csplode-red-5.png \
  shields.png
