## Makefile.am for tuxmath data/images/comets:
## Process with AutoMake:

cometsdir = $(pkgdatadir)/images/comets

dist_comets_DATA = bonus_comet1.png \
  bonus_comet2.png \
  bonus_comet3.png \
  bonus_cometex1a.png \
  bonus_cometex1.png \
  bonus_cometex2.png \
  bonus_cometex3.png \
  comet1.png \
  comet2.png \
  comet3.png \
	comet1.svg \
	comet2.svg \
	comet3.svg \
  cometex1a.png \
  cometex1.png \
  cometex2.png \
  cometex3.png \
  mini_comet1.png \
  mini_comet2.png \
  mini_comet3.png
