## Makefile.am for tuxmath data/images/comets:
## Process with AutoMake:

cometsdir = $(pkgdatadir)/images/comets

dist_comets_DATA = bonus_comet0.png \
  bonus_comet1.png \
  bonus_comet2.png \
  bonus_comet.svg \
  bonus_cometex0.png \
  bonus_cometex1.png \
  bonus_cometex2.png \
  bonus_cometex3.png \
  bonus_cometex.svg \
  comet0.png \
  comet1.png \
  comet2.png \
  comet.svg \
  cometex0.png \
  cometex1.png \
  cometex2.png \
  cometex3.png \
  cometex.svg \
  mini_comet1.png \
  mini_comet2.png \
  mini_comet3.png \
  left_powerup_comet.svg \
  left_powerup_cometd.png \
  left_powerup_comet0.png \
  left_powerup_comet1.png \
  left_powerup_comet2.png \
  powerup_cometex.svg \
  powerup_cometexd.png \
  powerup_cometex0.png \
  powerup_cometex1.png \
  powerup_cometex2.png \
  powerup_cometex3.png \
  right_powerup_comet.svg \
  right_powerup_cometd.png \
  right_powerup_comet0.png \
  right_powerup_comet1.png \
  right_powerup_comet2.png

