## Makefile.am for tuxmath data/images/factoroids:
## Process with AutoMake:

cometsdir = $(pkgdatadir)/images/factoroids

dist_comets_DATA = asteroid1.png \
 		 galaxy2.png	 \
		 star1.jpg 	 \
		 star4.png	 \
		 asteroid2.png 	 \
		 gbstars.png 	 \
		 star1.png 	 \
		 star5.png 	 \
		 asteroid3.png   \
		 star2.png	 \
		 galaxy1.png  	 \
		 ship01.png 	 \
		 ship.png	 \
		 star3.png	 \
		 factoroids.png  \
		 factors.png	 \
		 tux.png	 \
		 good.png

