## Makefile.am for tuxmath data/images/factoroids:
## Process with AutoMake:

cometsdir = $(pkgdatadir)/images/factoroids

dist_comets_DATA = asteroid1.png \
		 button_11.png	 \
		 button_13.png	 \
		 button_2.png	 \
		 button_3.png	 \
		 button_5.png	 \
		 button_7.png	 \
		 cockpit.png	 \
 		 galaxy2.png	 \
		 star1.jpg 	 \
		 star4.png	 \
		 asteroid2.png 	 \
		 gbstars.png 	 \
		 star1.png 	 \
		 star5.png 	 \
		 asteroid3.png   \
		 star2.png	 \
		 galaxy1.png  	 \
		 ship.png	 \
		 star3.png	 \
		 factoroids.png  \
		 factors.png	 \
		 tux.png	 \
		 good.png \
		 ship-cloaked.png \
		 forcefield.png	\
		 ship-thrust.png	\
		 ship-thrust-cloaked.png	\
		 powerbomb.png	\
		 shield.png	\
		 stealth.png

