## Makefile.am for tuxmath data/images/factroids:
## Process with AutoMake:

cometsdir = $(pkgdatadir)/images/factroids

dist_comets_DATA = asteroid1.png \
 		 galaxy2.png	 \
		 ship02.png	 \
		 ship06.png	 \
		 ship10.png 	 \
		 star1.jpg 	 \
		 star4.png	 \
		 asteroid2.png 	 \
		 gbstars.png 	 \
		 ship03.png 	 \
		 ship07.png 	 \
		 ship11.png 	 \
		 star1.png 	 \
		 star5.png 	 \
		 asteroid3.png   \
		 ship04.png 	 \
		 ship08.png 	 \
		 ship12.png 	 \
		 star2.png	 \
		 galaxy1.png  	 \
		 ship01.png 	 \
		 ship05.png 	 \
		 ship09.png 	 \
		 ship.png	 \
		 star3.png	 \
		 factoroids.png  \
		 factors.png




