## Makefile.am for tuxmath data/images/igloos:
## Process with AutoMake:

EXTRA_DIST = 	cloud.png	\
	composite.svg	\
	extra_life.png	\
	half.png	\
	intact.png	\
	melted1.png	\
	melted2.png	\
	melted3.png	\
	rebuilding1.png	\
	rebuilding2.png	\
	snow1.png	\
	snow2.png	\
	snow3.png	\
	steam1.png	\
	steam2.png	\
	steam3.png	\
	steam4.png	\
	steam5.png
