## Makefile.am for tuxmath data/images/igloos:
## Process with AutoMake:

EXTRA_DIST = 	cloud.png	\
	composite.svg	\
	extra_life.png	\
	half.png	\
	intact.png	\
	melted1.png	\
	melted2.png	\
	melted3.png	\
	rebuilding1.png	\
	rebuilding2.png	\
	snow1.png	\
	snow2.png	\
	snow3.png	\
	steam1.png	\
	steam2.png	\
	steam3.png	\
	steam4.png	\
	steam5.png

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos

	$(INSTALL_DATA) $(srcdir)/cloud.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/composite.svg $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/extra_life.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/half.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/intact.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/melted1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/melted2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/melted3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/rebuilding1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/rebuilding2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/snow1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/snow2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/snow3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/steam1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/steam2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/steam3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/steam4.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
	$(INSTALL_DATA) $(srcdir)/steam5.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/cloud.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/composite.svg
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/extra_life.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/half.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/intact.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/melted1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/melted2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/melted3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/rebuilding1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/rebuilding2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/snow1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/snow2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/snow3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/steam1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/steam2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/steam3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/steam4.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos/steam5.png
	rm -rf $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/igloos
