## Makefile.am for tuxmath data/images/penguins:
## Process with AutoMake:

EXTRA_DIST = 	flapdown.png	\
	flapup.png	\
	grumpy.png	\
	incoming.png	\
	sitting-down.png	\
	standing-up.png		\
	walk-off1.png	\
	walk-off2.png	\
	walk-off3.png	\
	walk-on1.png	\
	walk-on2.png	\
	walk-on3.png	\
	worried.png

install-data-local:
	$(MKDIR_P) $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins

	$(INSTALL_DATA) $(srcdir)/flapdown.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/flapup.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/grumpy.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/incoming.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/sitting-down.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/standing-up.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/walk-off1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/walk-off2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/walk-off3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/walk-on1.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/walk-on2.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/walk-on3.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
	$(INSTALL_DATA) $(srcdir)/worried.png $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins

uninstall-local:
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/flapdown.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/flapup.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/grumpy.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/incoming.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/sitting-down.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/standing-up.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/walk-off1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/walk-off2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/walk-off3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/walk-on1.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/walk-on2.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/walk-on3.png
	rm -f $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins/worried.png
	rm -rf $(DESTDIR)$(prefix)/share/$(PACKAGE)/images/penguins
