## Makefile.am for tuxmath data/images/penguins:
## Process with AutoMake:

penguinsdir = $(pkgdatadir)/images/penguins

dist_penguins_DATA = flapdown.png \
  flapup.png \
  grumpy.png \
  incoming.png \
  sitting-down.png \
  standing-up.png \
  walk-off1.png \
  walk-off2.png \
  walk-off3.png \
  walk-on1.png \
  walk-on2.png \
  walk-on3.png \
  worried.png
